<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/cardview_dark_background"
    tools:context=".NotedetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_note"
            android:textColor="#A1887F"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/save_note_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:outlineAmbientShadowColor="#A1887F"
            android:contentDescription="@string/done"
            android:src="@drawable/add"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_title_text"
            android:hint="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:autofillHints=""
            android:inputType="text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_content_text"
            android:hint="@string/content"
            android:minLines="15"
            android:gravity="top"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:inputType="text" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_note_text_view_btn"
        android:text="@string/delete_note"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="gone"
        android:textColor="#FF0000"/>
    <ImageButton
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:outlineAmbientShadowColor="#A1887F"
        android:contentDescription="@string/done"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />


</RelativeLayout>